# src/server-positions.js
@@ -63,11 +63,11 @@ const _positionBotStates = new Map();
 const PERSISTED_STATE_KEYS = [
   "hodlBaseline",
   "residuals",
-  "collectedFeesUsd",
   "compoundHistory",
-  "totalCompoundedUsd",
+  "compoundedAmount0",
+  "compoundedAmount1",
   "nftGasWeiByTokenId",
-  "nftCompoundedUsdByTokenId",
+  "nftCompoundedAmountsByTokenId",
   "lastCompoundAt",
   "totalLifetimeDepositUsd",
   "depositUsedFallback",
